# Stanley_ROS

./: CMakeLists.txt  package.xml
launch/: controller.launch
scripts/: main.py  stanley_pid.py
